assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Judson&family=Quando&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}
html {
    height: 100%;
}

h1, h2, h3, h4 {
    font-family: Quando, Helvetica, sans-serif;
    letter-spacing: 4px;
    text-transform: uppercase;
    
}

body {
    font-family: Judson, Helvetica, sans-serif;
    font-size: 20px;
    min-height: 100%;
}

/* Logo and navigation bar */

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    
}


h1 {
    margin-bottom: 30px;
    letter-spacing: 4px;
    font-size: 200%;
    
    
    
}
h1 a {
    text-decoration: none;
    color: #6c5488;
    

}
.logo-menu {
    display: flex;
    justify-content: space-between;
    /* position: fixed;
    top: 0; */
    width: 100%;
    height: 50px;
    background: #d9d2d5;
   
    
    
    
}

.menu {
    display: flex;
    
    
}
.menu li{
   list-style-type: none;
   padding: 0 15px;
   
}

.menu li:hover {
    transform: scale(1.1);
}

.menu a {
    text-decoration: none;
    color: #000;
}

.active {
    border-bottom: 1px solid #000;

}

main {
    margin-top: 50px;
}
 /* About-us page */

.about-us {
    display: flex;
    justify-content: space-between;
    background: url(../images/lady-in-lavender-field.webp);
    background-size: cover;
    /* position: relative;
    top: 50px; */
}
.ethos h2 {
    text-align: center;
    padding: 30px;
}
.ethos {
    width: 100%;
    border-radius: 0 30px 30px 0;
    background-color: #9d84bf;
    opacity: 0.85;
    margin-top: 50px;
    
}
.ethos li {
    display: flex;
    flex-direction: column;
    text-align: center;
    margin: 20px 30px;
    padding: 15px;
    border-radius: 30px;
    list-style-position: inside;
    background-color: #6c5488;
    opacity: 1.7;
    color: white;
    
}
.about-us-right-side {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-left: 50px;
    width: 80%;
}

.quote {
    /* display: flex;
    align-items:center;
    justify-content:center; */
    font-size: 170%;
    color: #fff
}

aside {
    height: fit-content;
    padding: 30px;
    line-height: 30px;
    border-radius: 30px 0 0 30px;
    background-color: #84a14f;
    opacity: 0.7;
}

/* Activities page */

.activities {
    display: flex;
    flex-direction: column;
    
    
}

.activities h2 {
    text-align: center;
    margin: 100px 0 50px;
}

.activity-type {
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    align-items: center;
    background-color:#89a35c;
    height: max-content;
    margin-bottom: 30px;
}
.activity-right-side {
    display: flex;
    flex-direction: row-reverse;
    width: 100%;
}

    /* SChedule  */
.schedule {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    width: 100%;
    margin: 10px 5px; 
}
    /* Image */

.image {
    width: 300px;
    height: 200px;
}
    /* Image zoom effect */
.image:hover {
    transform: scale(1.1); 
}  

    /* Activity description */
.description {
    display: flex;
    align-content: center;
    justify-content: center;
    width: 100%;
    margin: 10px 5px;
    padding: 0 30px;
    text-align: center;
}

.uppercase {
    text-transform: uppercase;
}

/* Contact-us page */

#contact-us-heading {
    margin: 50px 0;
    text-align: center;
}

.contact-us-box {
    display: flex;
    justify-content: space-between;
    margin: 30px;
    }

    /* Contact-us details */
.contact-us-details h3 {
    padding-bottom: 20px;
}

.contact-us-details {
    display: flex;
    flex-direction: column;
    /* width: 30%;
    margin: 0 30px 30px 30px;
    padding: 0 30px 30px 30px; */
}
.address {
    margin-bottom: 30px;
}

    /* Map */
.map {
    width: 60%;
    line-height: 50px;
}

iframe {
    width: 100%;
    height: 300px;
}

/* Footer */

footer {
    background: #d9d2d5;
    width: 100%;
    position: fixed;
    bottom: 0;
    right: 0;
    height: 50px;
}
.footer-box {
    display: flex;
    justify-content:center;
    align-items: center;
}

.footer-box span {
    text-transform:uppercase;
    font-size: 20px;
}

.social-networks {
    display: flex;
    list-style-type: none;
}

.social-networks a {
    color: #6c5488;
    padding: 30px;
    font-size: xx-large;
}

/* Gallery */
#photos {
    column-count: 4;
    column-gap: 5px;
}
#photos > img {
    width: 100%;
    
}

/* Sign-up page */
.sign-up-page {
    position: relative;
    top: 0px;
    right: 0;
    left: 0;
    background: url(../images/lady-in-lavender-field.webp);
    background-size: cover;
    min-height: 100vh;
    

}

.sign-up-page h2 {
    padding-top: 100px;
    text-align: center;
    color: #fff;
    
}

.fieldsets {
    display: flex;
    justify-content: space-around;
    /* margin-top: 100px; */
    padding: 50px;
    
}

#fieldset1, #fieldset2 {
    width: 30%;
    background-color: #9d84bf;
    /* opacity: 0.7; */
    
}

legend {
    text-transform: uppercase;
    font-size: 25px;
    letter-spacing: 2px;
    background-color:#6c5488;
    color: #fff;
    
}
.text-input {
    background: white;
    text-align: center;
    margin-bottom: 15px;
    margin-left: 15%;
    width: 70%;
    height: 25px;
    border: 3px solid #6c5488;
    border-radius: 5px;
}
.text-input:hover {
    transform: scale(1.05);
}
 #fieldset1 label {
    margin-left: 15%;
 }

 .checkbox {
    margin-bottom: 15px;
    margin-left: 15%;
 }

 .center-button {
    display: flex;
    justify-content: center;
    padding: 0 50px 50px;
    
 }
.join-button {
    margin: 0 30px 30px;
    padding: 20px 30px;
    font-size: x-large;
    text-transform: uppercase;
    text-align: center;
    background-color: green;
    color: #fff;
    border-radius: 10px;
    font-size: 100%;
}
.join-button:hover {
    background-color: #fff;
    color: green;
}



@media screen and (max-width: 1200px) {

    /* Logo and menu bar for max width 1200px */
    h1 {
        margin-bottom: 0;
    }
    
    .logo-menu {
        display: flex;
        flex-direction: column;
        align-items: center;
        height: 70px;
        padding-bottom: 5px;
}
        

        /* Sign up page for max width 1200px */

        #fieldset1, #fieldset2 {
            width: 48%;
        }

        .sign-up-page h2 {
            margin: 0;
            letter-spacing: 0;
}
}

/*  max width 1060px */

@media screen and (max-width: 1060px) {

    /* Activities page for max width 1060px*/

    .activities h2 {
        margin: 60px 0 50px;
    }
    
    .activity-type {
        margin-bottom: 10px;
    }

    .image {
        width: 100%;
        height: auto;
    }
}


@media screen and (max-width: 945px) {

    /* Sign up page for max width 945px */

    .fieldsets {
        display: flex;
        flex-direction: column;
        margin-top: 0;
        padding: 50px 0 50px;
    }

    #fieldset1 {
      
        align-self: center;
        margin: 0 0 30px;
        width: 70%;
    }
    #fieldset2 {
        align-self: center;
        width: 70%;
    }

    .text-input {
        margin-bottom: 15px;
    }

    .checkbox {
        margin-bottom: 15px;
}
    /* Gallery page for max width 945px */

#photos {
    column-count: 3;

}
}


@media screen and (max-width: 820px) {

     body {
        font-size: 18px;
    }

    /* Logo and menu bar for max width 820px */
    
    .logo-menu {
        
        height: 65px;
    }

    /* Activities page for max width 820px */
    
    .activities h2 {
        margin-bottom: 20px;
        margin-top: 50px;
    }
    .activity-type {
        display: flex;
        flex-direction: column;
    }
    .activities-right-side {
        display:flex
    }

    .schedule {
        width: 50%;
    }
    .image {
        width: 100%;
        height: auto;
    }
    .description {
        width: 100%;
    }

}
    @media screen and (max-width: 680px) {

        /* Logo and menu bar for max width 680px */
    
    h1 {
        font-size: 155%;
        letter-spacing: 0;
    }

/* About-us page for max width 680px */
    .about-us {
        flex-direction: column-reverse;
                
    }
    .about-us-right-side {
        flex-direction: column;
        width: 100%;
        margin-left: 0;
    }
    aside {
        
        margin-top: 30px;
        padding: 15px;
    }
    
    .quote {
        margin-top: 30px;
        align-self: center;
        text-align: center;
    }

    .ethos li {
        margin: 10px 15px;
        padding: 10px;
    }



    /* footer for max width 680px */
    .footer-box span {
        display: none;
    }


    /* Sign up page for max width 680px */

    .fieldsets #fieldset1 {
        width: 95%;
    }
    .sign-up-page h2 {
        font-size: 20px;
        padding-top: 70px;
    }

}


/* max width 480px */

@media screen and (max-width: 480px) {

    /* Logo and menu bar for max width 480px */

    h1 {
        letter-spacing: 0;
        font-size: 20px;
    }

    .logo-menu {
        height: 50px;
        font-size: 13px;
    }

    .menu li {
        padding: 0 5px;
    }

    /* About us page for max width 480px */

    .quote {
        margin-top: 10px;
        font-size: 110%;
    }

    aside {
        line-height: normal;
    }

    .ethos h2 {
        padding: 10px;
        letter-spacing: 0;
        font-size: 100%;
    }

    .ethos {
        margin-top: 20px;
    }

    /* Activities max width 480px*/
    .activities h2 {
        font-size: 20px;
    }

   .activities .image {
        width: 135px;
        height: 90px;
}

    /* Contact us page for max width 480px */

    #contact-us-heading {
        margin: 45px 0 20px;
        font-size: 20px;
    }

    .contact-us-box {
        display: flex;
        flex-direction: column;
        margin: 15px;

    }
    .contact-us-details h3 {
        padding-bottom: 10px;
    }

    .address {
        margin-bottom: 15px;
    }

    .get-in-touch {
        margin-bottom: 15px;
    }

    .map {
        width: 100%;
        line-height: 0;
    }

/* Footer max width 480px */
.social-networks a {
    padding: 20px;
    font-size: 20px;
}

/* Sign up page for max width 480px */

.sign-up-page h2 {
    font-size: 16px;
}

.fieldsets {
    padding: 20px 0 0;
}

legend {
    font-size: 18px;
    letter-spacing: normal;
}
#fieldset1 {
   
    margin: 0 5px 15px;
}

#fieldset2 {
    width: 95%;
}

.text-input {
    /* width: 95%; */
    margin-bottom: 5px;
}

.join-button {
    margin: 15px;
    padding: 10px 20px
}

/* Gallery page for max width 480px */

#photos {
    column-count: 2;

}
}

/* Logo and menu bar for max width 320px */
@media screen and (max-width: 320px) {
    .menu li {
        padding: 0 8px;
    }

    /* Gallery page for max width 320px */

#photos {
    column-count: 1;

}
}

